--- a/series/06.md
+++ b/series/06.md
@@ -309,11 +309,11 @@ RoPEはこの原理を言語モデルに適用する：
 > **講義テーマとの整合：** RoPEは「角度」と「回転」を本質的に使う設計であり、本講義のテーマ（球面、角度、回転）と完璧に整合する。これは偶然ではなく、高次元空間での効率的な位置表現として、回転が自然な選択であることを示している。
 
 > [!NOTE]
-> **リー群への一瞥 ── 「対称性の幾何」：** RoPEで使われている回転行列 $R_m$ の全体は、数学的には **リー群（Lie Group）** と呼ばれる構造を持つ。リー群とは、回転や平行移動などの「対称変換」の集合が、それ自体として滑らかな多様体になっているものを指す。2次元の回転全体 $\text{SO}(2)$ は円周 $S^1$ と同じ形をしており、RoPEの各次元ペアの回転はまさにこの $\text{SO}(2)$ 上の「動き」である。
+> **リー群への一瞥 ── 「対称性の幾何」：** 2次元の回転全体の集合 $\text{SO}(2)$ は、**リー群（Lie Group）** と呼ばれる構造を持つ。リー群とは、回転などの「対称変換」の集合が、それ自体として滑らかな多様体になっているものを指す。 $\text{SO}(2)$ は円周 $S^1$ と同じ形をしており、RoPEの各次元ペアに適用される回転行列 $R_m$ は、この連続な回転群 $\text{SO}(2)$ から位置 $m$ に応じてサンプリングされた要素である。
 >
-> リー群の重要な性質は、**群の演算（合成・逆元）が滑らかであること**だ。RoPEにおいて $R_m^\top R_n = R_{n-m}$ が成り立つのは、$\text{SO}(2)$ の群構造そのものである。回転の合成がまた回転になり、逆回転も回転であるという、閉じた代数構造が「相対位置だけが残る」という性質を保証している。
+> RoPEにおいて $R_m^\top R_n = R_{n-m}$ が成り立つのは、 $\text{SO}(2)$ が持ついくつかの性質による。第一に、回転の合成がまた回転になり、逆回転も回転であるという**群の閉じた構造**。第二に、2次元回転が**可換**であること（ $R_a R_b = R_b R_a$ ）。第三に、回転角の**加法性**（角度 $m\theta$ と $n\theta$ の差が $(n-m)\theta$ になる）。これらが合わさって、「相対位置だけが残る」という性質を保証している。
 >
-> 本講義では、リー群の理論に深入りする必要はない。しかし、「動き（変換）自体が幾何学的な空間をなす」という視点は、RoPEの設計がなぜ数学的にうまくいくのかを理解する鍵となる。回転という操作が、単なる計算テクニックではなく、対称性という深い数学的構造に根ざしていることを知っておくだけで十分である。
+> 本講義では、リー群の理論に深入りする必要はない。しかし、「変換自体が幾何学的な空間をなす」という視点は、RoPEの設計がなぜ数学的にうまくいくのかを理解する鍵となる。回転という操作が、単なる計算テクニックではなく、対称性という深い数学的構造に根ざしていることを知っておくだけで十分である。
 
 ## Softmaxの役割：連続から離散への橋渡し
 
