--- a/series/04.md
+++ b/series/04.md
@@ -95,14 +95,14 @@ $$\text{softmax}(\mathbf{z})_i = \frac{\exp(z_i / \tau)}{\sum _{j=1}^{K} \exp(z_
 > 上述の「Softmaxは決して0にならない（常に単体の内部に留まる）」という性質は、自然言語処理の歴史において、実は「計算の破綻」を防ぐための決定的な役割を果たしている。
 >
 > **1. 境界の呪い（無限大の損失）**
-> かつての素朴なn-gramモデル（最尤推定）では、学習データに無い単語の確率は $0$ になる。これは幾何学的に、分布が単体の「境界」に張り付く状態だ。もしモデルが正解データに対して確率 $0$ を出力してしまうと、負の対数尤度は $-\log 0 = \infty$ となり、学習が破綻する。
-> （KLダイバージェンスの定義において、 $P_{\text{予測}}(x)=0$ かつ $P_{\text{真}}(x)>0$ となる点が一つでもあると、対数項 $\log (P_{\text{真}}/P_{\text{予測}})$ が無限大に発散するためだ。）
+> かつての素朴なn-gramモデル（最尤推定）では、学習データに無い単語の確率は $0$ になる。これは幾何学的に、分布が単体の「境界」に張り付く状態だ。もし推定された分布が正解データに対して確率 $0$ を割り当ててしまうと、負の対数尤度は $-\log 0 = \infty$ となり、学習や評価が破綻する。
+> （KLダイバージェンスの定義において、 $P_{\text{予測}}(x)=0$ かつ $P_{\text{真}}(x)>0$ となる点が一つでもあると、対数項 $\log (P_{\text{真}}/P_{\text{予測}})$ が無限大に発散してしまうためだ。）
 >
 > **2. 構造による解決**
 > 先人たちはこの「確率0」を回避するため、Laplace平滑化（カウントに $+1$ ）やKneser-Ney平滑化など、手動で分布を境界から引き剥がす処理に苦心した。
 > 対してSoftmaxは、ロジットが有限である限り $\exp(z) > 0$ を保証し、**構造的に「確率0による計算破綻」を回避する**。
 >
-> 現代でもデータ疎性の問題自体は残るため（その対策の一例としてLabel Smoothing等が使われる）、統計的な課題が消えたわけではない。しかし、Softmaxのおかげで、少なくとも「たった一箇所の確率0で損失が無限大になり、学習全体が破綻する」という悪夢からは解放され、安心してエンドツーエンド学習が行えるようになったのである。
+> 現代でもデータ疎性の問題自体は残るため（その対策の一例としてLabel Smoothing等が使われる）、統計的な課題が消えたわけではない。しかし、Softmaxのおかげで、少なくとも「たった一箇所の確率0で損失が無限大になり、計算全体が破綻する」という悪夢からは解放され、安心してエンドツーエンド学習が行えるようになったのである。
 
 ### 球面からシンプレックスへ：第3回との接続
 
