--- a/series/04.md
+++ b/series/04.md
@@ -90,7 +90,7 @@ $$\text{softmax}(\mathbf{z})_i = \frac{\exp(z_i / \tau)}{\sum _{j=1}^{K} \exp(z_
 > **単体の「内部」と多様体構造：** 確率単体 $\Delta^{K-1}$ は、境界（いずれかの $p_i = 0$ ）を含む凸集合であり、境界の「角（かど）」や「辺」があるため、それ自体は滑らかな多様体ではない。しかし、Softmaxの出力は指数関数の性質上 $p_i > 0$ を常に満たし、境界に到達しない。したがって、Softmaxの像は単体の**開内部** $\text{int}(\Delta^{K-1}) = \{ \mathbf{p} \in \Delta^{K-1} \mid p_i > 0 \; \forall i \}$ に限られる。この開内部は境界を持たない $(K-1)$ 次元の滑らかな多様体であり、情報幾何学で扱う統計多様体として自然に機能する。本資料で確率単体を「多様体」と呼ぶとき、特に断りがない限り、この開内部を指す。
 
 > [!TIP]
-> **コラム：歴史的視点——「境界の呪い」とSoftmaxの功績**
+> **「境界の呪い」とSoftmaxの功績**
 >
 > 上述の「Softmaxは決して0にならない（常に単体の内部に留まる）」という性質は、自然言語処理の歴史において、実は「計算の破綻」を防ぐための決定的な役割を果たしている。
 >
