--- a/series/00.md
+++ b/series/00.md
@@ -78,6 +78,21 @@
 
 この構造を理解し、その「皮」に沿った移動や補間を行うことが、表現学習の本質である。
 
+**「データとは、高次元の構造が落とした『影』である」**
+
+多様体仮説が言うのは、まさにこのことだ。確率分布という「実体（雲）」が多様体上に広がっており、観測（サンプリング）はその雲から一粒の「雨粒」を取り出す行為に過ぎない。顔画像の例で言えば、「顔らしさ」を決める低次元多様体が「雲」であり、私たちが手にする数百万画素のベクトルがその「影」だ。
+
+本講義では、この「影」と「雲」の関係を段階的に解像度を上げながら扱う。以下の4つの概念が、それぞれの回で登場する：
+
+| 用語 | 幾何学的正体 | 登場回 |
+| --- | --- | --- |
+| **データ** ( $x$ ) | 分布から落とした「影・雨粒」 | 第0回（本回） |
+| **情報量** ( $-\log p(x)$ ) | 確率空間における「高さ（到達コスト）」 | 第4回 |
+| **エントロピー** ( $H(P)$ ) | 分布という「霧」の体積 | 第7回 |
+| **フィッシャー情報** ( $F(\theta)$ ) | 分布の変化のしやすさ（感度）＝違いを区別できる能力 | Appendix 4 |
+
+今はこの対応を「予告」として受け取っておけばよい。数式や詳細は各回で丁寧に導入する。
+
 > [!NOTE]
 > **多様体仮説の限界：** 多様体仮説は多くの実験的証拠に支持されているが、実データが「厳密な多様体」であるとは限らない。(i) ノイズや離散性により滑らかな多様体にならない、(ii) 局所次元が場所によって変わる、(iii) クラス境界付近で自己交差する、(iv) クラスごとに非連結な“島”になる、などが起こりうる。実務では「多様体」というより **「低次元構造っぽさ」** として捉える方が安全である。後続回では、「多様体と見なせるためにどの仮定が必要か」を明示する。
 
