--- a/series/04.md
+++ b/series/04.md
@@ -174,6 +174,19 @@ $$\frac{\partial \mathcal{L}}{\partial z_i} = p_i - \mathbf{1}[i = y]$$
 > **情報幾何学的な視点：**
 > カテゴリカル分布のパラメータ空間が $(K-1)$ 次元であることは、Softmaxが商空間構造を持つことと直結している。より正確には、 $\mathbb{R}^K \to \mathbb{R}^K/\mathbb{R}\mathbf{1}$ の商射影を通ってSoftmaxが因子化されることで、確率単体（内部）への対応が与えられる。Fisher情報行列が $K$ 次元のままだと特異になるのは、この構造によって1次元分の情報が「潰れている」ことの反映である。
 
+## 情報量：確率空間の「高さ」
+
+損失関数 $\mathcal{L} = -\log p_y$ に対数が現れる理由を、幾何学的に問い直してみよう。
+
+$-\log p(x)$ は **情報量（self-information / surprisal）** と呼ばれる量である。幾何学的には、これは確率空間における「高さ（標高）」に対応する：
+
+- $p = 1$ （確実な出来事） $\implies -\log p = 0$ （地面、高さゼロ、驚きなし）
+- $p \approx 0$ （希少な出来事） $\implies -\log p \to \infty$ （成層圏、高さ無限大、大きな驚き）
+
+深層学習が損失を最小化して「山を駆け下りる」とき、我々が減らしているのはモデルが正解を「どれだけ珍しいことだと見なすか」という高さである。言い換えれば、**正解クラスをできるだけ「地面（当然のこと）」として扱えるよう、モデルのパラメータを動かしている**。
+
+エントロピー $H(P) = \mathbb{E}_{x \sim P}[-\log p(x)]$ は、この「高さ」の分布 $P$ 全体に対する平均値である。第7回では、このエントロピーが分布という「霧の体積」として再登場する。
+
 ## なぜ指数形なのか：最大エントロピー原理
 
 Softmaxが分類で普遍的に使われるのは、単なる慣習ではない。それは情報理論的に最も「偏見のない」選択であり、同時に最適化の観点からも優れた性質を持つ。
