--- a/series/07.md
+++ b/series/07.md
@@ -194,6 +194,17 @@ $$C_d(\kappa) = \frac{\kappa^{\frac{d}{2} - 1}}{(2\pi)^{\frac{d}{2}} I_{\frac{d}
 
 ### エントロピーとしての不確実性
 
+**エントロピーとは、分布という「霧」の体積である。**
+
+第4回で登場した情報量 $-\log p(x)$ が「確率空間の高さ」だったとすれば、エントロピーはその高さの平均であり、分布全体が空間を占める「体積」に対応する：
+
+$$H(P) = \mathbb{E}_{x \sim P}[-\log p(x)]$$
+
+$\kappa$ との対応で言えば：
+
+- $\kappa \to \infty$ （点埋め込みの極限）：霧が凝縮してゼロ体積の点に収束。エントロピー最小。
+- $\kappa \to 0$ （一様分布の極限）：霧が球面全体に薄く広がる。エントロピー最大。
+
 分布の「ぼやけ具合」を定量化する自然な方法は、**エントロピー**である。エントロピーが高いほど、分布は広がっており、不確実性が高い。
 
 vMF分布のエントロピー $H$ は、 $\kappa$ と次元 $d$ の関数として表される：
@@ -218,6 +229,9 @@ $$H \approx -\log \kappa + \text{const.}$$
 
 > [!IMPORTANT]
 > **教育的簡略化の注意：** 「 $\kappa$ が大きいほど集中（低不確実性）」という定性的な理解は正しい。しかし、「 $H \approx -\log \kappa$ 」という定量的な式を使う場合は、適用条件を確認すること。
+
+> [!NOTE]
+> **第9回への伏線：** 第9回（拡散モデル）では、この「霧の体積」が事前分布（等方的なガウスノイズ）全体に向かって拡大していく過程、すなわちエントロピーが単調増大していく軌道を扱う。「データへの逆拡散」とは、エントロピーを減らして霧を凝縮させる操作に他ならない。
 
 ### 確信度としての $\kappa$
 
