--- a/series/04.md
+++ b/series/04.md
@@ -305,14 +305,14 @@ $$\text{softmax}(\mathbf{z} / \tau)_i = \frac{\exp(z_i / \tau)}{\sum_j \exp(z_j 
 
 損失関数 $\mathcal{L} = -\log p_y$ に対数が現れる理由を、幾何学的に問い直してみよう。
 
-$-\log p(x)$ は **情報量（self-information / surprisal）** と呼ばれる量である。これは「確実性からの遠さ」として捉えることができる：
+クラス $c$ に対して $-\log p_c$ で定義される量を **情報量（self-information / surprisal）** と呼ぶ。これは「確実性からの遠さ」として捉えることができる：
 
-- $p = 1$ （確実な出来事） $\implies -\log p = 0$ （遠さゼロ、驚きなし）
-- $p \approx 0$ （希少な出来事） $\implies -\log p \to \infty$ （遠さ無限大、大きな驚き）
+- $p_c = 1$ （確実な出来事） $\implies -\log p_c = 0$ （遠さゼロ、驚きなし）
+- $p_c \approx 0$ （希少な出来事） $\implies -\log p_c \to \infty$ （遠さ無限大、大きな驚き）
 
-損失を最小化することは、正解クラスを「遠い場所」から「手元（ $p \to 1$ ）」へ引き寄せることに相当する。言い換えれば、**正解クラスをできるだけ「当然のこと（遠さゼロ）」として扱えるよう、モデルのパラメータを動かしている**。
+損失 $\mathcal{L} = -\log p_y$ を最小化することは、正解クラス $y$ を「遠い場所」から「手元（ $p_y \to 1$ ）」へ引き寄せることに相当する。言い換えれば、**正解クラスをできるだけ「当然のこと（遠さゼロ）」として扱えるよう、モデルのパラメータを動かしている**。
 
-エントロピー $H(P) = \mathbb{E}_{x \sim P}[-\log p(x)]$ は、この「遠さ」の分布 $P$ 全体に対する平均値である。第7回では、このエントロピーが分布という「霧の体積」として再登場する。
+エントロピー $H(P) = \mathbb{E}_{c \sim P}[-\log p_c]$ は、この「遠さ」の分布 $P$ 全体に対する平均値である。第7回では、このエントロピーが分布という「霧の体積」として再登場する。
 
 ## 情報幾何学：確率空間の計量構造
 
