キーワードの更新 (典型帯)

--- a/series/07.md
+++ b/series/07.md
@@ -95,7 +95,7 @@ $$\mathcal{L} _{\text{VAE}} = \underbrace{\mathbb{E} _{q(\mathbf{z}|\mathbf{x})}
 
 ここで問題になるのが、ガウス分布が生む空間の**不均一性**である。
 
-標準正規分布 $\mathcal{N}(\mathbf{0}, \mathbf{I})$ の確率密度関数は原点で最大値をとる。しかし、高次元では**密度が最大の場所にサンプルが集まるとは限らない**。次元 $d$ が大きくなると、半径 $r$ の球殻の体積が $r^{d-1}$ に比例して急増するため、密度と体積の積——すなわち確率質量——は原点から離れた $r \approx \sqrt{d}$ 付近の薄い殻に集中する（concentration of measure）。これが**典型集合**と呼ばれる領域である。
+標準正規分布 $\mathcal{N}(\mathbf{0}, \mathbf{I})$ の確率密度関数は原点で最大値をとる。しかし、高次元では**密度が最大の場所にサンプルが集まるとは限らない**。次元 $d$ が大きくなると、半径 $r$ の球殻の体積が $r^{d-1}$ に比例して急増するため、密度と体積の積——すなわち確率質量——は原点から離れた $r \approx \sqrt{d}$ 付近の薄い殻に集中する（concentration of measure）。これが**典型集合**と呼ばれる領域であり、特に半径方向の薄い帯として見た呼び方が**典型帯**である。
 
 | | 確率密度 | 確率質量（典型集合） |
 | --- | --- | --- |
@@ -503,6 +503,8 @@ visualize_attention_with_uncertainty(sentence, attention, kappa)
 | 概念 | 定義 | 本回での役割 |
 | --- | --- | --- |
 | **VAE** | 潜在空間を分布として学習する生成モデル | 分布表現の先駆、ガウス空間の限界の例示 |
+| **典型集合** | 高次元ガウスで確率質量が集中する領域 | 潜在空間の不均一性の核心 |
+| **典型帯** | 典型集合のうち半径 $\sqrt{d}$ 付近の薄い帯 | ガウス潜在空間の実効的な居住領域 |
 | **vMF分布** | 単位球面上の方向分布 | 分布埋め込みの基礎 |
 | $\kappa$ （**集中度**） | 分布の集中の度合い | 確信度の定量化 |
 | **分布埋め込み** | 点ではなく分布としての表現 | 不確実性の明示的モデル化 |
